--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@amcharts/amcharts4": "4.9.9",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.3.2",
+    "@testing-library/user-event": "7.1.2",
+    "axois": "0.0.1-security",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "react": "^16.13.0",
+    "react-chartjs-2": "2.9.0",
+    "react-dates": "21.8.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
@@ -30,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.2"
   }
 }
