--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://192.168.2.110:9000/",
   "eslintConfig": {
     "extends": "react-app"
   },
